--- a/readme
+++ b/readme
@@ -1,3 +1,2 @@
-readme
 
-This project uses a generalized Polya urn Dirichlet process mixture model for multiple target tracking.
+This project introduces a technique for the unsupervised detection and tracking of arbitrary objects in videos. It is intended to reduce the need for detection or localization methods tailored to specific object types and serve as a general framework applicable to videos with varied objects, backgrounds, and film qualities. The technique uses a dependent Dirichlet process mixture (DDPM) known as the Generalized Polya Urn (GPUDDPM) to model image pixel data that can be extracted in a general manner from the regions in a video that represent objects.
