added more to relevant work

--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -15,7 +15,6 @@
 
 
 % griffin and steel, introducing dependent dirichlet processes
-
 @article{griffin2006order,
   title={Order-based dependent Dirichlet processes},
   author={Griffin, J.E. and Steel, M.F.J.},
@@ -27,6 +26,53 @@
   publisher={ASA}
 }
 
+% (unsupervised) object detection with gabor filters
+@article{jain1997object,
+  title={Object detection using Gabor filters},
+  author={Jain, A.K. and Ratha, N.K. and Lakshmanan, S.},
+  journal={Pattern Recognition},
+  volume={30},
+  number={2},
+  pages={295--309},
+  year={1997},
+  publisher={Elsevier}
+}
+
+% bayesian hierarchical model for clustering scene types
+@inproceedings{fei2005bayesian,
+  title={A bayesian hierarchical model for learning natural scene categories},
+  author={Fei-Fei, L. and Perona, P.},
+  booktitle={Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer Society Conference on},
+  volume={2},
+  pages={524--531},
+  year={2005},
+  organization={Ieee}
+}
+
+% unsupervised method (pLSA) to find different object types in images
+@inproceedings{sivic2005discovering,
+  title={Discovering objects and their location in images},
+  author={Sivic, J. and Russell, B.C. and Efros, A.A. and Zisserman, A. and Freeman, W.T.},
+  booktitle={Computer Vision, 2005. ICCV 2005. Tenth IEEE International Conference on},
+  volume={1},
+  pages={370--377},
+  year={2005},
+  organization={IEEE}
+}
+
+% a probabilistic exclusion principle for stopping coalescence
+@inproceedings{maccormick1999probabilistic,
+  title={A probabilistic exclusion principle for tracking multiple objects},
+  author={MacCormick, J. and Blake, A.},
+  booktitle={Computer Vision, 1999. The Proceedings of the Seventh IEEE International Conference on},
+  volume={1},
+  pages={572--578},
+  year={1999},
+  organization={IEEE}
+}
+
+
+% unsupervised object detection and tracking papers
 
 
 
