lot of edits. still need to add to inference and results sections. look for next push after dinner

--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -71,8 +71,175 @@
   organization={IEEE}
 }
 
+% papers for handing occlusion
+@article{senior2006appearance,
+  title={Appearance models for occlusion handling},
+  author={Senior, A. and Hampapur, A. and Tian, Y.L. and Brown, L. and Pankanti, S. and Bolle, R.},
+  journal={Image and Vision Computing},
+  volume={24},
+  number={11},
+  pages={1233--1243},
+  year={2006},
+  publisher={Elsevier}
+}
+@inproceedings{cucchiara2004probabilistic,
+  title={Probabilistic people tracking for occlusion handling},
+  author={Cucchiara, R. and Grana, C. and Tardini, G. and Vezzani, R.},
+  booktitle={Pattern Recognition, 2004. ICPR 2004. Proceedings of the 17th International Conference on},
+  volume={1},
+  pages={132--135},
+  year={2004},
+  organization={IEEE}
+}
+@inproceedings{zhou2003background,
+  title={A background layer model for object tracking through occlusion},
+  author={Zhou, Y. and Tao, H.},
+  booktitle={Computer Vision, 2003. Proceedings. Ninth IEEE International Conference on},
+  pages={1079--1085},
+  year={2003},
+  organization={IEEE}
+}
+
+
+% papers for tracking complex object interactions
+@article{dockstader2001multiple,
+  title={Multiple camera tracking of interacting and occluded human motion},
+  author={Dockstader, S.L. and Tekalp, A.M.},
+  journal={Proceedings of the IEEE},
+  volume={89},
+  number={10},
+  pages={1441--1455},
+  year={2001},
+  publisher={IEEE}
+}
+@inproceedings{mckenna2000tracking,
+  title={Tracking interacting people},
+  author={McKenna, S.J. and Jabri, S. and Duric, Z. and Wechsler, H.},
+  booktitle={Automatic Face and Gesture Recognition, 2000. Proceedings. Fourth IEEE International Conference on},
+  pages={348--353},
+  year={2000},
+  organization={IEEE}
+}
+
+% papers for tracking large number of targets
+@article{reilly2010detection,
+  title={Detection and tracking of large number of targets in wide area surveillance},
+  author={Reilly, V. and Idrees, H. and Shah, M.},
+  journal={Computer Vision--ECCV 2010},
+  pages={186--199},
+  year={2010},
+  publisher={Springer}
+}
+
+
+% papers for objects entering and exiting scene
+@inproceedings{stauffer2003estimating,
+  title={Estimating tracking sources and sinks},
+  author={Stauffer, C.},
+  booktitle={Computer Vision and Pattern Recognition Workshop, 2003. CVPRW'03. Conference on},
+  volume={4},
+  pages={35--35},
+  year={2003},
+  organization={IEEE}
+}
+@article{nedrich2010learning,
+  title={Learning scene entries and exits using coherent motion regions},
+  author={Nedrich, M. and Davis, J.},
+  journal={Advances in Visual Computing},
+  pages={120--131},
+  year={2010},
+  publisher={Springer}
+}
+
 
 % unsupervised object detection and tracking papers
+% -------------------------------------------------
+
+% blob tracking
+@techreport{francois2004real,
+  title={Real-time multi-resolution blob tracking},
+  author={Francois, A.R.},
+  year={2004},
+  institution={DTIC Document}
+}
+@inproceedings{collins2003mean,
+  title={Mean-shift blob tracking through scale space},
+  author={Collins, R.T.},
+  booktitle={Computer Vision and Pattern Recognition, 2003. Proceedings. 2003 IEEE Computer Society Conference on},
+  volume={2},
+  pages={II--234},
+  year={2003},
+  organization={IEEE}
+}
+
+% disadvantages of blob tracking
+@inproceedings{song2005model,
+  title={A model-based vehicle segmentation method for tracking},
+  author={Song, X. and Nevatia, R.},
+  booktitle={Computer Vision, 2005. ICCV 2005. Tenth IEEE International Conference on},
+  volume={2},
+  pages={1124--1131},
+  year={2005},
+  organization={IEEE}
+}
+
+% other joint detection and tracking papers
+@inproceedings{brox2003unsupervised,
+  title={Unsupervised segmentation incorporating colour, texture, and motion},
+  author={Brox, T. and Rousson, M. and Deriche, R. and Weickert, J.},
+  booktitle={Computer Analysis of Images and Patterns},
+  pages={353--360},
+  year={2003},
+  organization={Springer}
+}
+@article{sista2000unsupervised,
+  title={Unsupervised video segmentation and object tracking},
+  author={Sista, S. and Kashyap, R.L.},
+  journal={Computers in Industry},
+  volume={42},
+  number={2-3},
+  pages={127--146},
+  year={2000},
+  publisher={Elsevier}
+}
+@article{wang1998unsupervised,
+  title={Unsupervised video segmentation based on watersheds and temporal tracking},
+  author={Wang, D.},
+  journal={Circuits and Systems for Video Technology, IEEE Transactions on},
+  volume={8},
+  number={5},
+  pages={539--546},
+  year={1998},
+  publisher={IEEE}
+}
+@inproceedings{ng2005hybrid,
+  title={A hybrid approach for online joint detection and tracking for multiple targets},
+  author={Ng, W. and Li, J. and Godsill, S. and Vermaak, J.},
+  booktitle={Aerospace Conference, 2005 IEEE},
+  pages={2126--2141},
+  year={2005},
+  organization={IEEE}
+}
+%clustering trajectories
+@inproceedings{brostow2006unsupervised,
+  title={Unsupervised bayesian detection of independent motion in crowds},
+  author={Brostow, G.J. and Cipolla, R.},
+  booktitle={Computer Vision and Pattern Recognition, 2006 IEEE Computer Society Conference on},
+  volume={1},
+  pages={594--601},
+  year={2006},
+  organization={IEEE}
+}
+@article{brox2010object,
+  title={Object segmentation by long term analysis of point trajectories},
+  author={Brox, T. and Malik, J.},
+  journal={Computer Vision--ECCV 2010},
+  pages={282--295},
+  year={2010},
+  publisher={Springer}
+}
+
+
 
 
 
